--- a/pukcab.spec.in
+++ b/pukcab.spec.in
@@ -3,7 +3,7 @@
 
 Summary: Simple Network Backup Utility
 Name: pukcab
-Version: 1.5.53
+Version: @@VERSION@@
 Release: 1
 Source: http://www.ezix.org/software/files/%{name}-%{version}-Linux-%{arch}.zip
 URL: http://ezix.org/project/wiki/Pukcab
