--- a/pukcab.spec.in
+++ b/pukcab.spec.in
@@ -5,7 +5,7 @@ Summary: Simple Network Backup Utility
 Name: pukcab
 Version: @@VERSION@@
 Release: 1
-Source: http://www.ezix.org/software/files/%{name}-%{version}-Linux-%{arch}.zip
+Source: http://www.ezix.org/software/files/%{name}-%{version}.tar.gz
 URL: http://ezix.org/project/wiki/Pukcab
 License: GPL
 Group: Applications/System
@@ -37,9 +37,10 @@ Pukcab is a lightweight, single-binary backup system that stores de-duplicated, 
 This package ensures a system can act as a pukcab server.
 
 %prep
-%setup -q -c %{name}-%{version}
+%setup -q
 
 %build
+%{__make} VERSION=%{version}
 
 %install
 %{__rm} -rf "%{buildroot}"
