--- a/pukcab.spec.in
+++ b/pukcab.spec.in
@@ -9,6 +9,8 @@ Source: http://www.ezix.org/software/files/%{name}-%{version}.tar.gz
 URL: http://ezix.org/project/wiki/Pukcab
 License: GPL
 Group: Applications/System
+BuildRequires: golang
+BuildRequires: git
 
 %description
 Pukcab is a lightweight, single-binary backup system that stores de-duplicated, compressed and incremental backups on a remote server using just an SSH connection.
